Prevent Wenhao / Chris from stealing idea

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,13 @@ body {
 	height: 100%;
 	width: 100%;
 	display: flex;
+	flex-flow: column;
 	justify-content: center;
 	align-items: center;
+}
+
+.debug {
+	font-family: monospace;
 }
 
 #word-display {
