--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 	font-family: monospace;
 }
 
-#word-display {
+.display {
 	font-family: monospace;
 	font-weight: bold;
 	font-size: 50px;
