--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	font-family: monospace;
+	font-size: 20px;
 }
 
 .middle {
@@ -18,7 +19,6 @@ body {
 	grid-gap: 2em;
 	width: calc(100vmin - 4em);
   height: calc(100vh - 4em);
-
 }
 
 .grid-square {
@@ -35,6 +35,8 @@ body {
 	color: white;
 	padding: 10px 0;
 	margin-bottom: 10px;
+	text-align: center;
+	min-height: 30px;
 }
 
 .input {
@@ -44,6 +46,8 @@ body {
 	padding: 10px 0;
 	display: block;
 	margin-top: 10px;
+	text-align: center;
+	min-height: 30px;
 }
 
 /* .debug {
