--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,41 @@
+html {
+	overscroll-behavior: none;
+}
+
 html,body {
   height: 100%;
 	font-family: monospace;
 	font-size: 35px;
 background: black;
 	color: white;
+	position: relative;
 
 }
 
 header {
-
+	background: black;
 }
 
 .middle {
-			background-image: url('../c4.jpg');
-			background-size: cover;
-			background-position: center;
+	position: absolute;
+	top: -100%;
+	animation-name: falling;
+	animation-delay: 1s;
+	animation-fill-mode: forwards;
+	animation-duration: 40s;
+}
+
+.grid-square {
+
+}
+
+@keyframes falling {
+	from {
+		top: -100%;
+	}
+	to {
+		top: 200%;
+	}
 }
 
 footer {
