--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,14 @@
 html {
-	overscroll-behavior: none;
+	overscroll-behavior: none
 }
 
 html,body {
   height: 100%;
-	font-family: monospace;
+	font-family: 'Share Tech Mono', monospace;
 	font-size: 35px;
-background: black;
+  background: black;
 	color: white;
 	position: relative;
-
 }
 
 header {
@@ -22,7 +21,8 @@ header {
 	animation-name: falling;
 	animation-delay: 1s;
 	animation-fill-mode: forwards;
-	animation-duration: 40s;
+	animation-timing-function: ease-in;
+	animation-duration: 25s;
 }
 
 .grid-square {
@@ -36,6 +36,28 @@ header {
 	to {
 		top: 200%;
 	}
+}
+
+@keyframes rollRight {
+	from {
+		transform: rotate(0deg);
+		opacity: 1;
+	}
+	to {
+		transform: rotate(180deg);
+		opacity: 0;
+	}
+}
+
+@keyframes rollLeft {
+		from {
+			transform: rotate(360deg);
+			opacity: 1;
+		}
+		to {
+			transform: rotate(180deg);
+			opacity: 0;
+		}
 }
 
 footer {
