--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ html, body {
 header {
 	background: black;
 	visibility: hidden;
+	animation-name: 'fadein';
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
 }
 
 .middle {
@@ -28,7 +31,7 @@ header {
 
 #display-message {
 	opacity: 1;
-	animation-duration: 3s;
+	animation-duration: 1.5s;
 	animation-fill-mode: forwards;
 	font-size: 15vh;
 	line-height: 0.7;
